# abstracto-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
apps/terrain_scene/: main.cpp
apps/tree_scene/: main.cpp
assets/debug/: last_session.json  skeletal_animation.json  terrain_scene.json  tree_scene.json
assets/models/: fern1.glb  material_test.glb  monkey.glb
resources/shaders/: debug_gbuffer_pass.slang  debug_gbuffer_pass.spv  debug_overlay_pass.slang  debug_overlay_pass.spv  geometry_pass.slang  geometry_pass.spv  light_pass.slang  light_pass.spv  pbr_pass.slang  pbr_pass.spv  shadow_pass.slang  shadow_pass.spv  tonemap_pass.slang  tonemap_pass.spv
src/assets/: RenderableModel.h  TerrainGrassChunkModelAsset.h
src/debug/: CameraDebugMeshes.h  CharacterControllerDebugMeshes.h
src/editor/: AnimationEditorUI.h  DebugSessionIO.h  DebugUIState.h  DefaultDebugUI.h  RenderSettingsUI.h  SceneEditorUI.h
src/engine/assets/: RenderableModel.h  TerrainModelAsset.h
src/engine/debug/: TerrainDebugMeshes.h
src/engine/editor/: DebugSessionIO.h  DebugUIState.h  DefaultDebugUI.h  SceneEditorUI.h
src/engine/runtime/: AppPerformanceStats.h  AppRendererSetup.h  DefaultEngineApp.h  DefaultEngineConfig.h  RendererSceneAdapters.h  SceneRenderItemBuilder.h  ShadowSystem.h
src/engine/scene/: AppSceneController.h  SceneDefinition.h
src/runtime/: AppPerformanceStats.h  AppRendererSetup.h  DefaultEngineApp.h  DefaultEngineConfig.h  RendererSceneAdapters.h  SceneRenderItemBuilder.h  ShadowSystem.h
src/scene/: AppSceneController.h  SceneDefinition.h
(+7 files in other folders)
